Fixed a link to a section in the MI&I guide

--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -395,7 +395,7 @@ clusters you can place a new virtual machine.
 ifdef::cfme[]
 [NOTE]
 ====
-For information about utilization trends and identifying bottlenecks in your environment, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/managing_infrastructure_and_inventory/sect_datastores#data_optimization[Data Optimization] in _Managing Infrastructure and Inventory_.
+For information about utilization trends and identifying bottlenecks in your environment, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/managing_infrastructure_and_inventory/#data-optimization[Data Optimization] in _Managing Infrastructure and Inventory_.
 ====
 endif::cfme[]
 
