--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -10,7 +10,7 @@ After installing the {product-title} appliance, you must configure the database 
 
 ifdef::miq[]
 [[obtaining-the-appliance]]
-=== Obtaining the Appliance
+=== Obtaining the {product-title} Virtual Appliance
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Microsoft Azure* from the *--Choose your platform--* list.
@@ -20,7 +20,7 @@ endif::miq[]
 
 ifdef::cfme[]
 [[obtaining-the-appliance]]
-=== Obtaining the Appliance
+=== Obtaining the {product-title} Virtual Appliance
 
 . Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
 . Click *Downloads* in the menu bar.
@@ -30,18 +30,27 @@ ifdef::cfme[]
 endif::cfme[]
 
 [[uploading-the-appliance-to-microsoft-azure]]
-=== Uploading the Appliance to Microsoft Azure
+=== Uploading the {product-title} Virtual Appliance to Microsoft Azure
+
+You can upload the appliance to an Azure environment using the following two methods. Red Hat recommends using the PowerShell (AzureRm module) method.
+
+* Using Azure PowerShell script
+* Using Azure Command-Line Interface (Azure CLI)
 
 To upload the {product-title} appliance file to Microsoft Azure, ensure the following requirements are met:
 
 * Approximately 2 GB of space for each VHD image; 44+ GB of space, 8 GB RAM, and 4 VCPUs for the {product-title} appliance.
 * link:https://azure.microsoft.com/en-us/free/[Microsoft Azure Account]. 
 * Administrator access to the Azure portal.
+* xref:converting-aligning-cfme-appliance-image[Converting and Aligning the {product-title} Virtual Appliance Image]
 * Depending on your infrastructure, allow time for the upload.
+
+
+Importantly, Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The {product-title_short} virtual appliance image .vhd file is dynamic by default. Currently, the Azure Powershell script and Azure CLI does not automatically convert the dynamic .vhd file to fixed during upload. To upload using either method, the {product-title_short} virtual appliance image .vhd file must be first converted from dynamic to fixed, and properly aligned to the nearest 1 MB boundary. Once converted and properly aligned, you can then upload the appliance virtual image .vhd file using either the Azure PowerShell or Azure CLI method.
 
 [NOTE]
 ====
-These are the procedural steps as of the time of writing. For more information, consult the following Azure documentation. 
+These are the procedural steps as of the time of writing. For more information, see the following Azure documentation. 
 
 * https://azure.microsoft.com/en-us/documentation/articles/powershell-azure-resource-manager
 
@@ -50,13 +59,109 @@ The steps covered in the following article are for a Windows machine, however, m
 * https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-windows-create-powershell
 ====
 
-You can upload the appliance to an Azure environment using the following two methods. Red Hat recommends using the PowerShell (AzureRm module) method.
 
-* Using Azure PowerShell script
-* Using Azure Command-Line Interface (Azure CLI)
+[[converting-aligning-cfme-appliance-image]]
+==== Converting and Aligning the {product-title_short} Virtual Appliance Image
+
+Complete the following procedure to ensure the {product-title} dynamic .vhd file is aligned correctly, and is in a fixed-size VHD format. 
+
+[NOTE]
+====
+All .vhd files provisioned for Microsoft Azure must be aligned to the nearest 1 MB boundary and be in a fixed-size VHD format. If you attempt to upload a dynamic .vhd file or one that is not properly aligned, virtual appliance provisioning will not work.
+====
+
+. Convert the dynamic .vhd file you downloaded in xref:obtaining-the-appliance[] to RAW format.
++
+----
+$ qemu-img convert -f vpc -O raw <image-name.vhd> <image-name.raw>
+
+Example:
+
+$ qemu-img convert -f vpc -O raw cfme-azure-5.7.2.1-1.x86_64.vhd cfme-azure-5.7.2.1-1.x86_64.raw
+----
++
+. Copy and paste the script below into a new bash shell script file, for example, `aligned-size.sh`. Change _rawdisk="image-name"_ to the image name for your file. This script will calculate the rounded file size to the nearest 1 MB boundary.
++
+----
+#!/bin/bash
+rawdisk="cfme-azure-5.7.2.1-1.x86_64.raw"
+MB=$((1024 * 1024))
+size=$(qemu-img info -f raw --output json "$rawdisk" | gawk 'match($0, /"virtual-size": ([0-9]+),/, val) {print val[1]}')
+rounded_size=$((($size/$MB + 1) * $MB))
+echo "rounded size = $rounded_size"
+export rounded_size
+----
++
+. Run the shell script. The file name `aligned-size.sh` is used in this example.
++
+----
+$ sh aligned-size.sh
+
+rounded size = 34361835520
+----
++
+. Resize the virtual appliance image using the rounded size.
++
+----
+$ qemu-img resize -f raw <image-name.raw> <rounded_size>
+
+Example:
+
+$ qemu-img resize -f raw cfme-azure-5.7.2.1-1.x86_64.raw 34361835520
+
+Image resized.
+----
++
+. Convert the appliance image to a fixed-size .vhd file.
++
+----
+$ qemu-img convert -f raw -o subformat=fixed -O vpc <image-name.raw> <image-name.vhd>
+
+Example:
+
+qemu-img convert -f raw -o subformat=fixed -O vpc cfme-azure-5.7.2.1-1.x86_64.raw cfme-azure-5.7.2.1-1.x86_64.vhd
+----
++
+. Get the virtual size for the .vhd file.
++
+----
+$ qemu-img info --output=json -f vpc <path-to-image>
+
+Example:
+
+$ qemu-img info --output=json -f vpc cfme-azure-5.7.2.1-1.x86_64.vhd
+
+{
+  "virtual-size": 34361835520,
+  "filename": "cfme-azure-5.7.2.1-1.x86_64.vhd",
+  "cluster-size": 2097152,
+  "format": "vpc",
+  "actual-size": 2133401600,
+  "dirty-flag": false
+}
+----
+. Divide the virtual-size value by 1024, twice. If the result is a whole number, the .vhd file is aligned properly. The example below shows that the file is properly aligned.
++
+----
+34361835520 / 1024 / 1024 = 32770
+----
++
+
+
+
+[IMPORTANT]
+====
+qemu-img version 1.5.3 is used in this procedure. Check the qemu-img version using the command: `yum info qemu-img`. If the version is 2.2.1 or later, add the option _force_size_ in the conversion command, for example, _subformat=fixed,force_size_. 
+====
+
+The {product-title} Azure virtual appliance image is ready for uploading and provisioning in Microsoft Azure.
+
+
 
 [[uploading-the-appliance-using-azure-powershell-script]]
-==== Uploading the Appliance Using Azure Powershell Script
+==== Uploading the {product-title_short} Virtual Appliance Using Azure Powershell Script
+
+Complete the following steps to upload the {product-title} virtual appliance image you converted to a fixed-size VHD format and properly aligned per requirement using the procedure in xref:converting-aligning-cfme-appliance-image[].
 
 [NOTE]
 ====
@@ -157,22 +262,14 @@ New-AzureRmVM -ResourceGroupName $ResourceGroupName -Location $Location -VM $Vir
 +
 
 
-[[uploading-the-appliance-using-azure-command-line-interface]]
-==== Uploading the Appliance Using Azure Command-Line Interface
+[[uploading-the-appliance-using-azure-cli]]
+==== Uploading and Provisioning the {product-title_short} Virtual Appliance Using Azure Command-Line Interface
 
 Although it is recommended to use the PowerShell method, you can upload the appliance to an Azure environment using the Azure Command-Line Interface (Azure CLI). See link:https://azure.microsoft.com/en-us/documentation/articles/xplat-cli-azure-resource-manager/[] for steps on how to create and manage Azure resources using the Azure CLI. 
 
-Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The {product-title_short} virtual appliance image .vhd file is dynamic by default. Currently, the Azure CLI does not automatically convert the dynamic .vhd file to fixed during upload. To upload using the Azure CLI, the {product-title_short} virtual appliance image .vhd file must be first converted from dynamic to fixed, and properly aligned. 
 
-Therefore, the procedure to upload the {product-title} appliance using Azure CLI involves:
-
-. xref:installing-azure-cli[Installing Azure CLI 2.0]
-. xref:converting-aligning-cfme-appliance-image[Converting and Aligning the {product-title} Virtual Appliance Image]
-. xref:uploading-converted-cfme-appliance-image[Uploading and Provisioning the Fixed-Size {product-title} Azure Virtual Appliance Image].
-
-
-[[installing-azure-cli]]
-===== Installing Azure CLI 2.0
+[[install-azure-cli]]
+===== Install Azure CLI 2.0
 
 Complete the steps below to install Azure CLI 2.0 using curl. See link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[] for other installation methods.
 
@@ -191,138 +288,7 @@ $ curl -L https://aka.ms/InstallAzureCli | bash
 +
 
 
-
-[[converting-aligning-cfme-appliance-image]]
-===== Converting and Aligning the {product-title} Virtual Appliance Image
-
-Complete the following procedure to ensure the {product-title} dynamic .vhd file is aligned correctly, and is in a fixed-size VHD format. All .vhd files provisioned for Microsoft Azure must be aligned to the nearest 1 MB boundary and be in a fixed-size VHD format.
-
-[NOTE]
-====
-If you attempt to upload a dynamic .vhd file or one that is not properly aligned, virtual appliance provisioning will not work.
-====
-
-. Convert the dynamic .vhd file, downloaded in xref:obtaining-the-appliance[], to RAW format.
-+
-----
-$ qemu-img convert -f vpc -O raw <image-name.vhd> <image-name.raw>
-
-Example:
-
-$ qemu-img convert -f vpc -O raw cfme-azure-5.7.2.1-1.x86_64.vhd cfme-azure-5.7.2.1-1.x86_64.raw
-----
-+
-. Copy and paste the script below into a new bash shell script file, for example, `aligned-size.sh`. Change _rawdisk="image-name"_ to the image name for your file. This script will calculate the rounded file size to the nearest 1 MB boundary.
-+
-----
-#!/bin/bash
-rawdisk="cfme-azure-5.7.2.1-1.x86_64.raw"
-MB=$((1024 * 1024))
-size=$(qemu-img info -f raw --output json "$rawdisk" | gawk 'match($0, /"virtual-size": ([0-9]+),/, val) {print val[1]}')
-rounded_size=$((($size/$MB + 1) * $MB))
-echo "rounded size = $rounded_size"
-export rounded_size
-----
-+
-. Run the shell script. The file name `aligned-size.sh` is used in this example.
-+
-----
-$ sh aligned-size.sh
-
-rounded size = 34361835520
-----
-+
-. Resize the virtual appliance image using the rounded size.
-+
-----
-$ qemu-img resize -f raw <image-name.raw> <rounded_size>
-
-Example:
-
-$ qemu-img resize -f raw cfme-azure-5.7.2.1-1.x86_64.raw 34361835520
-
-Image resized.
-----
-+
-. Convert the appliance image to a fixed-size .vhd file.
-+
-----
-$ qemu-img convert -f raw -o subformat=fixed -O vpc <image-name.raw> <image-name.vhd>
-
-Example:
-
-qemu-img convert -f raw -o subformat=fixed -O vpc cfme-azure-5.7.2.1-1.x86_64.raw cfme-azure-5.7.2.1-1.x86_64.vhd
-----
-+
-. Get the virtual size for the .vhd file.
-+
-----
-$ qemu-img info --output=json -f vpc <path-to-image>
-
-Example:
-
-$ qemu-img info --output=json -f vpc cfme-azure-5.7.2.1-1.x86_64.vhd
-
-{
-  "virtual-size": 34361835520,
-  "filename": "cfme-azure-5.7.2.1-1.x86_64.vhd",
-  "cluster-size": 2097152,
-  "format": "vpc",
-  "actual-size": 2133401600,
-  "dirty-flag": false
-}
-----
-. Divide the virtual-size value by 1024, twice. If the result is a whole number, the .vhd file is aligned properly. The example below shows that the file is properly aligned.
-+
-----
-34361835520 / 1024 / 1024 = 32770
-----
-+
-
-
-
-[IMPORTANT]
-====
-qemu-img version 1.5.3 is used in this procedure. Check the qemu-img version using the command: yum info qemu-img. If the version is 2.2.1 or later, add the option force_size in the conversion command, for example, subformat=fixed,force_size. 
-====
-
-The {product-title} Azure virtual appliance image is ready for uploading and provisioning in Microsoft Azure.
-
-
-[[uploading-converted-cfme-appliance-image]]
-===== Uploading and Provisioning the Fixed-Size {product-title} Azure Virtual Appliance Image
-
-Complete the following steps to upload and provision the virtual appliance image you converted to a fixed-size VHD format and properly aligned per requirement.
-
-
-[NOTE]
-====
-The exported storage connection string does not persist after a system reboot. If any of the commands in the following steps fail, export the storage connection string again using the commands below.
-
-. Get the storage account connection string.
-+
-----
-$ az storage account show-connection-string -n <storage-account-name> -g <resource-group>
-
-Example:
-
-$ az storage account show-connection-string -n azrhelclistact -g azrhelclirsgrp
-{
-  "connectionString": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=azrhelclistact;AccountKey=NreGk...=="
-}
-----
-+
-. Export the connection string. Copy the connection string and paste it into the following command. This connects your system to the storage account. 
-+
-----
-$ export AZURE_STORAGE_CONNECTION_STRING="<storage-connection-string>"
-
-Example:
-
-$ export AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=azrhelclistact;AccountKey=NreGk...=="
-----
-+
-====
+Complete the following steps to upload and provision the {product-title} virtual appliance you converted to a fixed-size VHD format and properly aligned per requirement using the procedure in xref:converting-aligning-cfme-appliance-image[].
 
 
 . Upload the image to the storage container. It may take several minutes. Note: Enter `az storage container list` to get the list of storage containers.
@@ -386,5 +352,35 @@ For a menu, please type: appliance_console
 . Enter `sudo appliance_console` at the prompt. The summary screen appears.
 
 You have successfully provisioned a Red Hat CloudForms virtual appliance in Microsoft Azure. 
+
+
+[NOTE]
+====
+The exported storage connection string does not persist after a system reboot. If any of the commands in the following steps fail, export the storage connection string again using the commands:
+
+. Get the storage account connection string.
++
+----
+$ az storage account show-connection-string -n <storage-account-name> -g <resource-group>
+
+Example:
+
+$ az storage account show-connection-string -n azrhelclistact -g azrhelclirsgrp
+{
+  "connectionString": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=azrhelclistact;AccountKey=NreGk...=="
+}
+----
++
+. Export the connection string. Copy the connection string and paste it into the following command. This connects your system to the storage account. 
++
+----
+$ export AZURE_STORAGE_CONNECTION_STRING="<storage-connection-string>"
+
+Example:
+
+$ export AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=azrhelclistact;AccountKey=NreGk...=="
+----
++
+====
 
 
