add note about using param prefix for variables

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -1,4 +1,4 @@
-[[catalogs-services]]
+cd comkout [[catalogs-services]]
 == Catalogs and Services
 
 [[about-catalogs-and-services]]
@@ -63,7 +63,10 @@ When provisioning a service, input will be needed from the requester. *Service D
 
 [[adding-a-service-dialog]]
 ===== Adding a Service Dialog
-
+[NOTE]
+====
+When creating a service dialog for use with Ansible playbook catalog items, variable elements must use the prefix *param_* when assigning the value. For example, a new variable labeled *key1* should have its name input as *param_key1*.
+====
 include::common/service-dialog-creation.adoc[]
 
 [[importing-service-dialogs]]
