minor language change

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -65,7 +65,7 @@ When provisioning a service, input will be needed from the requester. *Service D
 ===== Adding a Service Dialog
 [NOTE]
 ====
-When creating a service dialog for use with Ansible playbook catalog items, variable elements must use the prefix *param_* when assigning the value. For example, a new variable labeled *key1* should have its name input as *param_key1*.
+When creating a service dialog for use with Ansible playbook catalog items, variable elements must use the prefix *param_* when assigning the value. For example, a new variable labeled *key1* should have its value set as *param_key1*.
 ====
 include::common/service-dialog-creation.adoc[]
 
