Added procedures for Amazon EBS storage managers, and updated references to the UI to match the latest version.

--- a/common/openstack/cinder-backup-create.adoc
+++ b/common/openstack/cinder-backup-create.adoc
@@ -1,4 +1,4 @@
-. Navigate to menu:Storage[Volumes].
+. Navigate to menu:Storage[Block Storage > Volumes].
 . Click the volume you want to back up to open the volume's summary page.
 . Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Create a Backup of this Cloud Volume] (*Create a Backup of this Cloud Volume*). 
 . Enter a name for the backup in *Backup Name*.
