--- a/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
@@ -3,28 +3,58 @@
 
 A volume is a block storage device that you can attach to or detach from an instance to manage the storage available to that instance. Volumes are managed through storage managers, which are added automatically to {product-title} when the corresponding provider is added.
 
+
 :leveloffset: 2
+= Amazon Elastic Block Store Manager Volumes
+
+This section outlines the actions that you can perform on Amazon Elastic Block Store manager volumes.
+
+:leveloffset: 3
+include::Creating_Cloud_Volumes_EBS.adoc[]
+
+:leveloffset: 3
+include::Creating_an_EBS_Volume_Snapshot.adoc[]
+
+:leveloffset: 3
+include::Attaching_EBS_Volumes.adoc[]
+
+:leveloffset: 3
+include::Detaching_EBS_Volumes.adoc[]
+
+:leveloffset: 3
+include::Editing_EBS_Volumes.adoc[]
+
+:leveloffset: 3
+include::Deleting_EBS_Volumes.adoc[]
+
+
+:leveloffset: 2
+= OpenStack Block Storage Manager Volumes
+
+This section outlines the actions that you can perform on OpenStack Block Storage manager volumes.
+
+:leveloffset: 3
 include::Creating_Cloud_Volumes.adoc[]
 
-:leveloffset: 2
+:leveloffset: 3
 include::Creating_a_Backup.adoc[]
 
-:leveloffset: 2
+:leveloffset: 3
 include::Restoring_from_a_Cinder_Backup.adoc[]
 
-:leveloffset: 2
+:leveloffset: 3
 include::Creating_a_Cinder_Volume_Snapshot.adoc[]
 
-:leveloffset: 2
+:leveloffset: 3
 include::Attaching_Volumes.adoc[]
 
-:leveloffset: 2
+:leveloffset: 3
 include::Detaching_Volumes.adoc[]
 
-:leveloffset: 2
+:leveloffset: 3
 include::Editing_Volumes.adoc[]
 
-:leveloffset: 2
+:leveloffset: 3
 include::Deleting_Volumes.adoc[]
 
 
