--- a/common/openstack/cinder-instance-attach.adoc
+++ b/common/openstack/cinder-instance-attach.adoc
@@ -1,6 +1,6 @@
-. Navigate to menu:Storage[Volumes].
+. Navigate to menu:Storage[Block Storage > Volumes].
 . Select the volume to attach.
 . Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Attach selected Cloud Volume to an Instance] (*Attach selected Cloud Volume to an Instance*) to open the *Attach Cloud Volume* screen. 
 . Select an instance from the list.
-. (Optional) Enter the *Device Mountpoint*.
+. Optionally, enter a *Device Mountpoint*.
 . Click *Attach*.
