--- a/common/openstack/cinder-snapshot-create.adoc
+++ b/common/openstack/cinder-snapshot-create.adoc
@@ -1,10 +1,10 @@
-. Navigate to menu:Storage[Volumes].
+. Navigate to menu:Storage[Block Storage > Volumes].
 . Click the volume to snapshot to open the volume's summary page.
 . Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Create a Snapshot of this Cloud Volume] (*Create a Snapshot of this Cloud Volume*). 
 . Enter a name for the snapshot in *Snapshot Name*.
 . Click *Save*.
 
-View a volume's snapshots by clicking *Cloud Volume Snapshots* on the volume's summary page.
+Click *Cloud Volume Snapshots* on the summary page of a volume to view the snapshots for that volume.
 
 
 [NOTE]
