--- a/common/openstack/cinder-volume-create.adoc
+++ b/common/openstack/cinder-volume-create.adoc
@@ -3,10 +3,13 @@
 After creating a volume, only the volume name can be edited.
 ====
 
-. Navigate to menu:Storage[Volumes].
+. Navigate to menu:Storage[Block Storage > Volumes].
 . Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[] (*Add a new Cloud Volume*).
+. Select the OpenStack Block Storage manager from the *Storage Manager* list.
 . Enter a *Volume Name*.
-. Enter the volume size in gigabytes (GB).
+. Enter the size of the volume in gigabytes (GB).
 . Under *Placement*, select the cloud tenant to attach it to.
 . Click *Add*.
+
+The volume appears in the list of volumes after it has been provisioned.
 
