--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_Cinder_Volume_Snapshot.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_Cinder_Volume_Snapshot.adoc
@@ -1,7 +1,7 @@
 [[creating_cinder_volume_snapshot]]
 = Creating a Snapshot of a Volume
 
-You can create a snapshot of a volume to preserve a volume's state at a specific point in time. The snapshot can be used to create a duplicate of the volume.
+You can create a snapshot of a volume to preserve the state of the volume at a specific point in time. The snapshot can be used to create a duplicate of the volume.
 
 To create a snapshot of a volume:
 
