--- a/doc-Managing_Infrastructure_and_Inventory/topics/Editing_Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Editing_Volumes.adoc
@@ -5,9 +5,10 @@ Only the volume name can be edited on an existing volume.
 
 To edit a volume's name:
 
-. Navigate to menu:Storage[Volumes].
+. Navigate to menu:Storage[Block Storage > Volumes].
 . Select the volume to edit to open its summary page.
 . Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Edit this Cloud Volume] (*Edit this Cloud Volume*). 
 . Enter the new *Volume Name*.
 . Click *Save*.
           
+
