PR Review Changes - fixed expression, typos, capitalization consistency.

--- a/api/reference/actions.adoc
+++ b/api/reference/actions.adoc
@@ -2,7 +2,7 @@
 [[actions]]
 == Actions
 
-Management of Actions is provided via the following collection:
+Management of actions is provided via the following collection:
 
 [source,data]
 ----
@@ -72,7 +72,7 @@ or creating multiple actions:
 [NOTE]
 ====
 Please refer to the link:../appendices/resource_attributes.html#actions[Resource Attributes]
-page for a list of available attributes when creating Actions.
+page for a list of available attributes when creating actions.
 ====
 
 [[editing-actions]]
@@ -139,7 +139,7 @@ or simply:
 DELETE /api/actions/101
 ----
 
-Deleting multiple Actions can be done as follows:
+Deleting multiple actions can be done as follows:
 
 ----
 POST /api/actions
