--- a/api/reference/alerts.adoc
+++ b/api/reference/alerts.adoc
@@ -2,7 +2,7 @@
 [[alerts]]
 == Alert Management
 
-Management of Alerts, Alert Actions and Alert Definitions is provided via the following collections and subcollections:
+Management of alerts, alert actions and alert definitions is provided via the following collections and subcollections:
 
 [source,data]
 ----
@@ -12,16 +12,16 @@ Management of Alerts, Alert Actions and Alert Definitions is provided via the fo
 /api/alert_definitions
 ----
 
-Queries of Alerts:
+Queries of alerts:
 
 * link:#querying-alerts[Querying Alerts]
 
-Queries and Creation of Alert Actions:
+Queries and creation of alert actions:
 
 * link:#querying-alert-actions[Querying Alert Actions]
 * link:#creating-alert-actions[Creating Alert Actions]
 
-Full CRUD actions on Alert Definitions:
+Full CRUD actions on alert definitions:
 
 * link:#querying-alert-definitions[Querying Alert Definitions]
 * link:#creating-alert-definitions[Creating Alert Definitions]
@@ -46,13 +46,13 @@ GET /api/alerts/:id
 [[querying-alert-actions]]
 === Querying Alert Actions
 
-Querying all Alert actions of a specific alert is done via the subcollection as follows:
+Querying all alert actions of a specific alert is done via the subcollection as follows:
 
 ----
 GET /api/alerts/:alert_id/alert_actions
 ----
 
-Querying an Alert action of a specific alert is done via the subcollection resource as follows:
+Querying an alert action of a specific alert is done via the subcollection resource as follows:
 
 ----
 GET /api/alerts/:alert_id/alert_actions/:alert_action_id
@@ -61,7 +61,7 @@ GET /api/alerts/:alert_id/alert_actions/:alert_action_id
 [[creating-alert-actions]]
 === Creating Alert Actions
 
-Creating an Alert action for a specific alert can be done by the following POST:
+Creating an alert action for a specific alert can be done by the following POST:
 
 ----
 POST /api/alerts/:alert_id/alert_actions
@@ -85,7 +85,7 @@ Querying all alert definitions in the system is simply:
 GET /api/alert_definitions
 ----
 
-Getting details on a specific Action:
+Getting details on a specific alert definition:
 
 ----
 GET /api/alert_definitions/:id
@@ -94,7 +94,7 @@ GET /api/alert_definitions/:id
 [[creating-alert-definitions]]
 === Creating Alert Definitions
 
-Alert Definitions can be created via a POST to the alert_definitions collection or via the *create* action
+Alert definitions can be created via a POST to the alert definitions collection or via the *create* action
 signature which also allows creation of multiple alert definitions in a single request.
 
 ----
@@ -129,11 +129,11 @@ or creating multiple alert definitions:
 [NOTE]
 ====
 Please refer to the link:../appendices/resource_attributes.html#alert-definitions[Resource Attributes]
-page for a list of available attributes when creating Actions.
+page for a list of available attributes when creating alert definitions.
 ====
 
 [[editing-alert-definitions]]
-=== Editing Actions
+=== Editing Alert Definitions
 
 ----
 POST /api/alert_definitions/:id
@@ -177,7 +177,7 @@ POST /api/alert_definitions
 [[deleting-alert-definitions]]
 === Deleting Alert Definitions
 
-Alert Definitions can be deleted via either the *delete* POST action or via the DELETE HTTP method.
+Alert definitions can be deleted via either the *delete* POST action or via the DELETE HTTP method.
 
 ----
 POST /api/alert_definitions/101
@@ -196,7 +196,7 @@ or simply:
 DELETE /api/alert_definitions/101
 ----
 
-Deleting multiple Actions can be done as follows:
+Deleting multiple alert definitions can be done as follows:
 
 ----
 POST /api/alert_definitions
