--- a/api/reference/authentications.adoc
+++ b/api/reference/authentications.adoc
@@ -2,7 +2,7 @@
 [[authentications]]
 == Authentications
 
-Management of Authentications is provided via the following collection:
+Management of authentications is provided via the following collection:
 
 [source,data]
 ----
@@ -25,19 +25,19 @@ Querying all authentications in the system is simply:
 GET /api/authentications
 ----
 
-Getting details on a specific Authentication:
+Getting details on a specific authentication:
 
 ----
 GET /api/authentications/:id
 ----
 
-One can also query authentications of a configuration_script_payload's manager as follows:
+One can also query authentications of a configuration script payload's manager as follows:
 
 ----
 GET /api/configuration_script_payloads/:id/authentications
 ----
 
-Or getting details on a specific Authentication:
+Or getting details on a specific authentication:
 
 ----
 GET /api/configuration_script_payloads/:id/authentications/:authentication_id
@@ -78,8 +78,8 @@ or creating multiple authentications:
 }
 ----
 
-Optionally, Authentications can be created for a provider of a specific configuration script payload,
-thus eliminating the need of specifying a manager_resource.
+Optionally, authentications can be created for a provider of a specific configuration script payload,
+thus eliminating the need of specifying a provider.
 
 ----
 POST /api/configuration_script_payloads/:id/authentications
@@ -113,7 +113,7 @@ Also supporting bulk creates:
 [NOTE]
 ====
 Please refer to the link:../appendices/resource_attributes.html#authentications[Resource Attributes]
-page for a list of available attributes when creating Authentications.
+page for a list of available attributes when creating authentications.
 ====
 
 [[editing-authentications]]
@@ -182,7 +182,7 @@ or simply:
 DELETE /api/authentications/101
 ----
 
-Deleting multiple Authentications can be done as follows:
+Deleting multiple authentications can be done as follows:
 
 ----
 POST /api/authentications
