--- a/api/reference/conditions.adoc
+++ b/api/reference/conditions.adoc
@@ -2,7 +2,7 @@
 [[conditions]]
 == Conditions
 
-Management of Conditions is provided via the following collection:
+Management of conditions is provided via the following collection:
 
 [source,data]
 ----
@@ -46,7 +46,7 @@ POST /api/conditions
 {
   "name" : "sample_condition",
   "description" : "Sample Condition",
-  "expression" : { "=" : { "field" : "ContainerImage-architecture", "value" : "dsa" } },
+  "expression" : { "=" : { "field" : "ExtManagementSystem.container_images-architecture", "value" : "dsa" } },
   "towhat" : "ExtManagementSystem",
   "modifier" : "allow"
 }
@@ -69,7 +69,7 @@ or creating multiple conditions:
 [NOTE]
 ====
 Please refer to the link:../appendices/resource_attributes.html#conditions[Resource Attributes]
-page for a list of available attributes when creating Conditions.
+page for a list of available attributes when creating conditions.
 ====
 
 [[editing-conditions]]
@@ -136,7 +136,7 @@ or simply:
 DELETE /api/conditions/101
 ----
 
-Deleting multiple Conditions can be done as follows:
+Deleting multiple conditions can be done as follows:
 
 ----
 POST /api/conditions
