--- a/api/reference/configuration_script_sources.adoc
+++ b/api/reference/configuration_script_sources.adoc
@@ -2,7 +2,7 @@
 [[configuration-script-sources]]
 == Configuration Script Sources
 
-Management of Configuration Script Sources is provided via the following collection:
+Management of configuration script sources is provided via the following collection:
 
 [source,data]
 ----
@@ -25,7 +25,7 @@ Querying all configuration script sources in the system is simply:
 GET /api/configuration_script_sources
 ----
 
-Getting details on a specific Action:
+Getting details on a specific configuration script source:
 
 ----
 GET /api/configuration_script_sources/:id
@@ -34,7 +34,7 @@ GET /api/configuration_script_sources/:id
 [[creating-configuration-script-sources]]
 === Creating Configuration Script Sources
 
-Configuration Script Sources can be created via a POST to the configuration_script_sources collection or via the *create* action
+Configuration script sources can be created via a POST to the configuration script sources collection or via the *create* action
 signature which also allows creation of multiple configuration script sources in a single request.
 
 ----
@@ -68,7 +68,7 @@ or creating multiple configuration script sources:
 [NOTE]
 ====
 Please refer to the link:../appendices/resource_attributes.html#configuration-script-sources[Resource Attributes]
-page for a list of available attributes when creating Configuration Script Sources.
+page for a list of available attributes when creating configuration script sources.
 ====
 
 [[editing-configuration-script-sources]]
@@ -116,7 +116,7 @@ POST /api/configuration_script_sources
 [[deleting-configuration-script-sources]]
 === Deleting Configuration Script Sources
 
-Configuration Script Sources can be deleted via either the *delete* POST action or via the DELETE HTTP method.
+Configuration script sources can be deleted via either the *delete* POST action or via the DELETE HTTP method.
 
 ----
 POST /api/configuration_script_sources/101
@@ -135,7 +135,7 @@ or simply:
 DELETE /api/configuration_script_sources/101
 ----
 
-Deleting multiple Configuration Script Sources can be done as follows:
+Deleting multiple configuration script sources can be done as follows:
 
 ----
 POST /api/configuration_script_sources
