--- a/api/reference/instances.adoc
+++ b/api/reference/instances.adoc
@@ -2,7 +2,7 @@
 [[instance-management]]
 == Instance Management
 
-Management of Instances adds support for the following actions:
+Management of instances adds support for the following actions:
 
 [cols="1,2",options="header",]
 |=====================
@@ -38,7 +38,7 @@ These actions can be triggered on individual instance resources:
 /api/instances/:id
 ----
 
-As simply as POSTing the following action to an Instance.
+As simply as POSTing the following action to an instance.
 
 [source,json]
 ----
