--- a/api/reference/orchestration.adoc
+++ b/api/reference/orchestration.adoc
@@ -2,21 +2,21 @@
 [[orchestration-support]]
 == Orchestration Support
 
-Support for Orchestration is provided by the following:
+Support for orchestration is provided by the following:
 
 * link:#orchestration-templates[Orchestration Templates]
 
 [[orchestration-templates]]
 === Orchestration Templates ===
 
-Management of Orchestration Templates is provided with the following collection:
+Management of orchestration templates is provided with the following collection:
 
 [source,data]
 ----
 /api/orchestration_templates
 ----
 
-Full CRUD actions on Orchestration Templates is available:
+Full CRUD actions on orchestration templates is available:
 
 
 * link:#querying-orchestration-templates[Querying Orchestration Templates]
@@ -28,13 +28,13 @@ Full CRUD actions on Orchestration Templates is available:
 [[querying-orchestration-templates]]
 === Querying Orchestration Templates
 
-Querying all Orchestration Templates in the system:
+Querying all orchestration templates in the system:
 
 ----
 GET /api/orchestration_templates
 ----
 
-Getting details on a specific Orchestration Template:
+Getting details on a specific orchestration template:
 
 ----
 GET /api/orchestration_templates/:id
@@ -43,8 +43,8 @@ GET /api/orchestration_templates/:id
 [[creating-orchestration-templates]]
 === Creating Orchestration Templates
 
-Orchestration Templates can be created via a POST to the Orchestration Templates collection or via the *create* action signature which also
-allows creation of multiple Orchestration Templates in a single request.
+Orchestration templates can be created via a POST to the orchestration templates collection or via the *create* action signature which also
+allows creation of multiple orchestration templates in a single request.
 
 ----
 POST /api/orchestration_templates
@@ -62,7 +62,7 @@ POST /api/orchestration_templates
 }
 ----
 
-or creating multiple Orchestration Templates:
+or creating multiple orchestration templates:
 
 [source,json]
 ----
@@ -79,7 +79,7 @@ or creating multiple Orchestration Templates:
 [NOTE]
 ====
 Please refer to the link:../appendices/resource_attributes.html#orchestration_templates[Resource Attributes]
-page for a list of available attributes when creating Orchestration Templates.
+page for a list of available attributes when creating orchestration templates.
 ====
 
 [[editing-orchestration-templates]]
@@ -99,7 +99,7 @@ POST /api/orchestration_templates/:id
 }
 ----
 
-or editing multiple Orchestration Templates:
+or editing multiple orchestration templates:
 
 ----
 POST /api/orchestration_templates
@@ -138,12 +138,12 @@ POST /api/orchestration_templates/:id
 {
   "action" : "copy",
   "resource" : {
-    "content" : "{ 'Description' : 'Copied Test Content' }\n"
+    "content" : "{ 'Description' : 'Copied Test Content' }"
   }
 }
 ----
 
-or copying multiple Orchestration Templates:
+or copying multiple orchestration templates:
 
 ----
 POST /api/orchestration_templates
@@ -156,11 +156,11 @@ POST /api/orchestration_templates
   "resources" : [
     {
       "href" : "http://localhost:3000/api/orchestration_templates/101",
-      "content" : "{ 'Description' : 'Copied Test Content 1' }\n"
+      "content" : "{ 'Description' : 'Copied Test Content 1' }"
     },
     {
       "href" : "http://localhost:3000/api/orchestration_templates/102",
-      "content" : "{ 'Description' : 'Copied Test Content 2' }\n"
+      "content" : "{ 'Description' : 'Copied Test Content 2' }"
     },
     ...
   ]
@@ -170,7 +170,7 @@ POST /api/orchestration_templates
 [[deleting-orchestration-templates]]
 === Deleting Orchestration Templates
 
-Orchestration Templates can be deleted via either the *delete* POST action or via the DELETE HTTP method.
+Orchestration templates can be deleted via either the *delete* POST action or via the DELETE HTTP method.
 
 ----
 POST /api/orchestration_templates/101
@@ -189,7 +189,7 @@ or simply:
 DELETE /api/orchestration_templates/101
 ----
 
-Deleting multiple Orchestration Templates can be done as follows:
+Deleting multiple orchestration templates can be done as follows:
 
 ----
 POST /api/orchestration_templates
