--- a/api/reference/policies.adoc
+++ b/api/reference/policies.adoc
@@ -2,7 +2,7 @@
 [[policy-management]]
 == Policy Management
 
-Management of Policies and Policy profiles is provided in the following forms:
+Management of policies and policy profiles is provided in the following forms:
 
 * Querying of policies via the primary collection:
 
@@ -249,7 +249,7 @@ or creating multiple policies:
 [NOTE]
 ====
 Please refer to the link:../appendices/resource_attributes.html#policies[Resource Attributes]
-page for a list of available attributes when creating Policies.
+page for a list of available attributes when creating policies.
 ====
 
 [[editing-policies]]
@@ -315,7 +315,7 @@ or simply:
 DELETE /api/policies/101
 ----
 
-Deleting multiple Policies can be done as follows:
+Deleting multiple policies can be done as follows:
 
 ----
 POST /api/policies
@@ -368,7 +368,7 @@ policy_profiles subcollection of resources. Policy management is available on th
 [[policy-specification]]
 ==== Policy specification
 
-Policies and Policy Profiles can be specified using one of the following forms:
+Policies and policy profiles can be specified using one of the following forms:
 
 By href:
 
