--- a/api/reference/service_orders.adoc
+++ b/api/reference/service_orders.adoc
@@ -2,7 +2,7 @@
 [[service-orders]]
 == Service Orders
 
-The Service Orders collection and actions are provided for managing Shopping Carts and their related
+The service orders collection and actions are provided for managing Shopping Carts and their related
 service requests.
 
 [source,data]
@@ -215,7 +215,7 @@ POST /api/service_orders/cart
 [[copying-service-orders]]
 === Copying Service Orders
 
-A Service Order can be copied into a new Service Order via the _copy_ action:
+A service order can be copied into a new service order via the _copy_ action:
 
 [source,data]
 ----
@@ -232,7 +232,7 @@ POST /api/service_orders/:id
 }
 ----
 
-Service Ordered can also be copied in bulk as follows:
+Service orders can also be copied in bulk as follows:
 
 [source,data]
 ----
