--- a/api/reference/services.adoc
+++ b/api/reference/services.adoc
@@ -253,7 +253,7 @@ Management of Service Templates is available via the following collection:
 /api/service_templates
 ----
 
-Full CRUD is available on service_templates.
+Full CRUD is available on service templates.
 
 * link:#creating-service-templates[Creating Service Templates]
 * link:#editing-service-templates[Editing Service Templates]
@@ -552,7 +552,7 @@ POST /api/services/:id
 }
 ----
 
-The following example bulk removes resources from multiple services:
+The following example removes resources in bulk from multiple services:
 
 ----
 POST /api/services
@@ -596,7 +596,7 @@ POST /api/services/:id
 }  
 ----
 
-The following example bulk removes all resources from multiple services:
+The following example removes all resources in bulk from multiple services:
 
 ----
 POST /api/services
