--- a/api/reference/snapshots.adoc
+++ b/api/reference/snapshots.adoc
@@ -2,7 +2,7 @@
 [[snapshot-management]]
 == Snapshot Management
 
-Management of Snapshots is provided for Virtual Machines and Instances via the snapshots subcollection:
+Management of snapshots is provided for virtual machines and instances via the snapshots subcollection:
 
 [source,data]
 ----
@@ -36,7 +36,7 @@ The following snapshot actions are availables for the supported resources:
 [[query-snapshots]]
 === Querying Snapshots
 
-Snapshots Machines are queried via the subcollection of vms and instances as follows:
+Snapshots of machines are queried via the subcollection of vms and instances as follows:
 
 Querying all snapshots of a VM:
 
